Fix #18040: Dojox mobile iOS7 theme: invisible label on icon container icons

--- a/mobile/themes/ios7/IconContainer.css
+++ b/mobile/themes/ios7/IconContainer.css
@@ -34,7 +34,7 @@
   margin-top: 5px;
   margin-bottom: 5px;
   width: 74px;
-  color: white;
+  color: #000000;
 }
 .mblIconArea img {
   vertical-align: middle;
