--- a/mobile/themes/ios7/variables.less
+++ b/mobile/themes/ios7/variables.less
@@ -355,7 +355,7 @@
 	margin-top: 5px;
 	margin-bottom: 5px;
 	width: 74px;
-	color: white;
+	color: @ios7-color;
 }
 
 .mblIconItemDeleteIcon-styles () {
